@@ -63,6 +63,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3280) Respect 'move' group permission on page moves
 * (bug 2613) Clear saved passwords from the form
 * Finally dropped MySQL 3.23.x support
+* Experimental feature to allow translation of block expiry times
+  Implementation only for Finnish currently
 
 
 === Caveats ===
